k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openai
  labels:
    app: openai
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openai
      version: v1
  template:
    metadata:
      labels:
        app: openai
        version: v1
    spec:
      serviceAccountName: openai-service-account
      containers:
      - name: openai
        image: docker.io/duynguyen03/openai-service:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
